--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.5",
+    "@emailjs/browser": "^4.4.1",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "framer-motion": "^12.9.4",
