--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "build:prod": "vite build --config vite.config.prod.js"
   },
   "dependencies": {
     "@clerk/clerk-react": "^4.30.5",
@@ -19,6 +20,7 @@
     "powerbi-client": "^2.22.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.22.3"
   },
@@ -35,6 +37,8 @@
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-pwa": "^1.0.1"
   }
 }
